--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "hiaguedes": "^1.0.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.11",
     "typescript": "^5.5.2",
